@@ -1,3 +1,7 @@
+2002-10-05  Paul D. Smith  <psmith@gnu.org>
+
+	* POTFILES.in: Add variable.h as it has a translatable string.
+
 2002-08-08  Paul D. Smith  <psmith@gnu.org>
 
 	* LINGUAS: Add a new translation for Chinese (simplified) (zh_CN).
